Bug 403974 - Reference Images: z-position/order not saved
Summary: Reference Images: z-position/order not saved
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools/Reference Images (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Debian stable Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-02-05 20:18 UTC by Rebecca Breu
Modified: 2020-08-06 17:36 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot before/after saving (303.46 KB, image/jpeg)
2019-02-05 20:23 UTC, Rebecca Breu
Details
"up & down" reference image library test (248.94 KB, application/x-krita)
2019-09-07 08:54 UTC, kerdudo
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Rebecca Breu 2019-02-05 20:18:46 UTC
(This happens on 4.1.7 as well as current master)

1. Create document
2. Add two reference images (REF1 and REF2)
3. Put the REF2 behind REF1 (for ex. with "lower" and moving it around)
4. Save the document and close it
5. Reopen the document

Now the REF2 is on top of REF1. Apparently the z-position/order of the reference images doesn't get saved.
Comment 1 Rebecca Breu 2019-02-05 20:23:19 UTC
Created attachment 117845 [details]
Screenshot before/after saving
Comment 2 mvowada 2019-02-06 08:23:40 UTC
Hi. I can confirm with Krita 4.2.0-pre-alpha (git 86c58a3) appimage on Ubuntu 14.04:

    1. CTRL+N (new)
    2. Tools > "Reference Images Tool"
    3. "Tool Options" > click [+] and add 2 reference images
    4. with the last added reference image selected > "CTRL+ALT+[" (lower it)
    5. save
    6. reopen

Actual Results: the lowered ref. image will show up on top of the other.
Comment 3 Halla Rempt 2019-02-06 10:53:58 UTC
Jouni, can you take a look?
Comment 4 David REVOY 2019-02-06 12:50:09 UTC
I also experience this bug.
But it took me time to see (I stack a lot of ref around my canvas since only recently).
Thank you for reporting this one.
Comment 5 joupent 2019-02-13 14:05:56 UTC
Git commit e46e8d5c8d8f52df2187db11327f36f8994930ba by Jouni Pentikäinen.
Committed on 13/02/2019 at 14:01.
Pushed by jounip into branch 'master'.

Fix saving Z-order of reference images

M  +2    -0    plugins/tools/defaulttool/referenceimagestool/KisReferenceImageCollection.cpp

https://commits.kde.org/krita/e46e8d5c8d8f52df2187db11327f36f8994930ba
Comment 6 kerdudo 2019-09-07 08:54:08 UTC
Created attachment 122519 [details]
"up & down"  reference image library test
Comment 7 kerdudo 2019-09-07 08:57:03 UTC
Hello, I have same issue with 2.4.6 version on load reference image library or opening krita file with reference image. Order is not correctly displayed.
Try it with reference image library test file in attachment.

Thanks.
Comment 8 kerdudo 2019-09-07 08:58:22 UTC
(In reply to kerdudo from comment #7)
> Hello, I have same issue with 2.4.6 version on load reference image library
> or opening krita file with reference image. Order is not correctly displayed.
> Try it with reference image library test file in attachment.
> 
> Thanks.

Sorry, version 4.2.6 :)
Comment 9 Halla Rempt 2020-05-04 11:02:01 UTC
This is still broken in 4.3.0-beta1
Comment 10 wolthera 2020-08-06 15:19:27 UTC
Git commit bdf725217f7068e99d02c873109f0c498dd0fd15 by Wolthera van Hövell tot Westerflier.
Committed on 06/08/2020 at 15:18.
Pushed by woltherav into branch 'krita/4.3'.

Fix z-order saving for reference images.

Like shape layers reference image shapes ough to be sorted first.

M  +3    -1    plugins/impex/libkra/kis_kra_save_visitor.cpp

https://invent.kde.org/graphics/krita/commit/bdf725217f7068e99d02c873109f0c498dd0fd15
Comment 11 wolthera 2020-08-06 17:36:47 UTC
Git commit a9150cf70bb35d167861c071f27f7d7132182ade by Wolthera van Hövell tot Westerflier.
Committed on 06/08/2020 at 15:18.
Pushed by woltherav into branch 'master'.

Fix z-order saving for reference images.

Like shape layers reference image shapes ough to be sorted first.

M  +3    -1    plugins/impex/libkra/kis_kra_save_visitor.cpp

https://invent.kde.org/graphics/krita/commit/a9150cf70bb35d167861c071f27f7d7132182ade