Fix z-order saving for reference images.

Like shape layers reference image shapes ough to be sorted first.

BUG:403974